--- a/academia/ch.html
+++ b/academia/ch.html
@@ -16,7 +16,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
   <title>Samuel Carlisle BEng (hons) Dunelm MIET</title>
   <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  1311
+ 
   <link rel="stylesheet" href="../css/layout.css">
   <link rel="stylesheet" href="../css/typography.css">
   <link rel="stylesheet" href="../css/utilities.css">
@@ -121,18 +121,16 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div id="project-header">
 
       <div class="main-title">Secondary Education</div>
-      <div class="body-text">
-Secondary education at a boarding school: <a href="https://en.wikipedia.org/wiki/Christ's_Hospital" target="_blank">Christ's Hospital</a> (Independant / Public School). Scholarship / Presentee of: <a href="https://en.wikipedia.org/wiki/Worshipful_Company_of_Carmen" target="_blank">The Worshipful Company of Carmen</a>
+      <div class="body-text">Secondary education at a boarding school: <a href="https://en.wikipedia.org/wiki/Christ's_Hospital" target="_blank">Christ's Hospital</a> (Independant / Public School). Scholarship / Presentee of: <a href="https://en.wikipedia.org/wiki/Worshipful_Company_of_Carmen" target="_blank">The Worshipful Company of Carmen</a>
 
 </div>
-      <image class="project-header-image" src="../assets/images/Thanks_CH.jpg">
       </div>
-
-
       <div id="project-details">
-        <div class="subheader-text">Project Details / Background</div>
+        <div class="subheader-text">Overview of my time at Christ's Hosital</div>
         <div class="project-details-content">
-          <div class="body-text">As I reflect on my time at Christ's Hospital, a renowned boarding school nestled in the heart of West Sussex in the United Kingdom, a wave of nostalgia and positve memories wash over me. The years I spent within its historic walls were some of the most formative and enjoyable of my life.
+          <div class="body-text">
+<img loading="lazy" src="../assets/images/thornton_99.jpg" style="float: left; width: 100%; margin-right: 20px; margin-bottom: 20px;">            
+As I reflect on my time at Christ's Hospital, a renowned boarding school nestled in the heart of West Sussex in the United Kingdom, a wave of nostalgia and positve memories wash over me. The years I spent within its historic walls were some of the most formative and enjoyable of my life.
 <br><br>
 One of the highlights of my time at Christ's Hospital was my involvement in sports. I developed a deep passion for rugby, spending countless hours on the field honing my skills, learning teamwork, and competing with my fellow students. The camaraderie and sense of belonging that came from being a part of a sports team was unparalleled, and I cherished every moment of it. Towards the end of my time at the school I was proud to represent my school on the 2nd XV team and I was even able to represent the school on the 1st XV team a few times, fantastic!
 <br><br>
@@ -140,12 +138,14 @@ Another sport that captivated me was fives, a game similar to squash but with it
 <br><br>
 Academically, Christ's Hospital pushed me to reach my full potential. I was determined to excel, and my hard work paid off as at the age of 16 I was ranked in the top 10 of my year for the highest GCSE results in the school. The rigorous curriculum, expert teachers, and stimulating discussions in the classroom challenged me to think critically, broaden my horizons, and develop a thirst for knowledge, especially in languages and sciences, that continues to drive me to this day.
 <br><br>
+<img loading="lazy" src="../assets/images/grecians_west.jpg" style="float: right; height: 300px; width: 400px; margin-left: 20px; margin-bottom: 20px;">
 The success I enjoyed at GCSE level paved the way for my A-levels, where I continued to excel focusing on: Maths, Further Maths, Physics, Chemistry, and English. The support and guidance of my teachers, as well as the nurturing environment of Christ's Hospital, empowered me to achieve excellent grades and lay the foundation for my future academic endeavors.
 <br><br>
 With my stellar academic performance, I was accepted into Durham University to study General Engineering. The solid foundation and strong work ethic instilled in me at Christ's Hospital set me up for success in higher education and beyond and I was so well prepared for university that I received early praise from my tutor at college, in the first term, for being one of the brightest pupils in the tutorial group.
 <br><br>
 But beyond academics and sports, Christ's Hospital provided me with a sense of community and also lifelong friendships. The bonds forged with fellow students from diverse backgrounds, who shared similar passions and aspirations, were invaluable. The boarding experience fostered independence, resilience, and adaptability, as I learned to navigate the challenges of living away from home and building a support system among my peers.
 <br><br>
+<img loading="lazy" src="../assets/images/Thanks_CH.jpg" style="float: left; height: 300px; width: 400px; margin-right: 20px; margin-bottom: 20px;">
 In conclusion, my experiences at Christ's Hospital were nothing short of extraordinary. From the thrill of playing rugby and fives and going on expeditions, camps and exercises all over the country with the Duke of Edinburgh award scheme and the Cadets (CCF), to achieving academic excellence, to forming lasting friendships, the school shaped me into the person I am today. I will forever cherish the memories of my time there, and I am grateful for the opportunities and education it provided me, which have laid the foundation for a successful future.</div>
         </div>
       </div>
@@ -176,7 +176,7 @@ In conclusion, my experiences at Christ's Hospital were nothing short of extraor
     <div id="footer">
 
       <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <image src="../assets/icons/mail.svg" class="footer-icon"/>
+        <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon"/>
       </a>
     </div>
 
