--- a/actions/cryptoparty.html
+++ b/actions/cryptoparty.html
@@ -108,20 +108,29 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../service/business_development.html">> Business Development</a>
     </div>
   </div>
-  <!-- Use any element to open/show the overlay navigation menu -->
-  <span onclick="openNav()">open</span>
+
   <!-- MAIN PAGE CONTENT -->
   <div id="main-content">
     <!-- PROJECT HEADER -->
     <div id="project-header">
       <div class="main-title">Cryptoparty</div>
-      <div class="body-text">A grassroots, global endeavour to introduce the basics of practical cryptography such as the Tor, PGP, OTR, disk encryption and VPNs to the general public. The project primarily consists of a series of free public workshops.</div>
-      <image class="project-header-image" src="../assets/images/cryptoparty.jpeg">
+      <div class="body-text">
+        <img loading="lazy" src="../assets/images/Cryptoparty.png" style="float: left; height: 300px; width: 400px; margin-right: 20px; margin-bottom: 20px;">
+      Impact: As a grassroots, global, endeavour the Cryptoparty movement has been empowering individuals around the world by teaching them the basics of practical cryptography and how to use encryption tools such as Tor, PGP, OTR, disk encryption and VPNs and other techniques that enhance privacy protection. As an active participant in this movement, I have witnessed firsthand its tremendous impact on raising awareness about data privacy and fostering a culture where people prioritize their online safety.   The project primarily consists of a series of free public workshops.</div>
       </div>
       <div id="project-details">
-        <div class="subheader-text">Project Details / Background</div>
+        <div class="subheader-text">Community Organizer, Cryptoparty London</div>
         <div class="project-details-content">
-          <div class="body-text">Seeded Cryptoparty London in solidarity with the global movement. Key contributor in the subsequent, grassroots, global endeavour to introduce the basics of practical cryptography such as the Tor, PGP, OTR, disk encryption and VPNs to the general public. The project primarily consists of a series of free public workshops.</div>
+          <div class="body-text">
+            <img loading="lazy" src="../assets/images/cryptopartylondon.jpg" style="float: right; height: 300px; width: 400px; margin-left: 20px; margin-bottom: 20px;">As a community organizer, I have been actively involved in the CryptoParty movement, specifically as a member of CryptoParty London. CryptoParty is a global grassroots movement that aims to educate individuals about online privacy, security, and cryptography in the digital age. As a passionate advocate for digital rights and privacy, I have dedicated my time and efforts to organizing events and workshops within the CryptoParty London community.
+<br><br>
+One of my key roles as a community organizer has been to get the right group of people together and create a structure and momentum and then let go so that the community can continue autonomously. Specifically at the beginning I focused on building up a core team and facilitating online collaboration and creating learning material and hosting educational sessions on various topics related to online privacy and security. This includes teaching attendees about encryption tools, secure communication methods, and best practices for protecting their personal data online. Through engaging and interactive workshops, I have collaborated with other members of CryptoParty London to help people who attended our events to better understand the importance of securing their devices, safeguarding their digital privacy and taking control of their online presence.
+<br><br>
+In addition to education, I have also been involved in organizing events and meetups to foster a sense of community within the CryptoParty London group. These gatherings provide opportunities for members to share their knowledge, exchange ideas, and collaborate on projects related to privacy and security. By creating a welcoming and inclusive environment, I have helped to build a strong community of like-minded individuals who are passionate about protecting their digital rights and promoting privacy-conscious practices.
+<br><br>
+As a community organizer, I have also been actively involved in outreach efforts to raise awareness about the CryptoParty movement and the importance of online privacy all over the world. This includes promoting events through social media, creating informational resources, and collaborating with other organizations and communities that share similar values. Through these efforts, I have helped to expand the reach of the global CryptoParty movement and attract both individuals who are interested in teaching and also those interested in learning more about online privacy and security to find each other and to exchange knowledge, perspectives and skills.
+<br><br>
+Being a community organizer in the CryptoParty movement has been a fulfilling and rewarding experience. It has allowed me to connect with like-minded individuals, share my knowledge and skills, and contribute to a global movement that advocates for digital rights and privacy. I am proud of my contributions in the CryptoParty movement and continue promoting the importance of online privacy and security.</div>
           <div class="subheader-text">History</div>
           <div class="body-text">A successor to the Cypherpunks of the 1990s, CryptoParty was conceived in late August 2012 by the Australian journalist Asher Wolf in a Twitter post following the passing of the Cybercrime Legislation Amendment Bill 2011 and the proposal of a two-year data retention law in that country, the Cybercrime Legislation Amendment Bill 2011. The DIY, self-organizing movement immediately went viral, with a dozen autonomous CryptoParties being organized within hours in cities throughout Australia, the US, the UK, and Germany. Many more parties were soon organized or held in Chile, The Netherlands, Hawaii, Asia, etc. Tor usage in Australia itself spiked, and CryptoParty London with 130 attendees—some of whom were veterans of the Occupy London movement—had to be moved from London Hackspace to the Google campus in east London's Tech City. As of mid-October 2012 some 30 CryptoParties have been held globally, some on a continuing basis, and CryptoParties were held on the same day in Reykjavik, Brussels, and Manila. The first draft of the 442-page CryptoParty Handbook (the hard copy of which is available at cost) was pulled together in three days using the book sprint approach, and was released 2012-10-04 under a CC-BY-SA license.</div>
           <div class="subheader-text">Edward Snowden involvement</div>
@@ -152,7 +161,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <!-- FOOTER -->
       <div id="footer">
         <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-          <image src="../assets/icons/mail.svg" class="footer-icon" />
+          <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
         </a>
       </div>
     </body>
