--- a/actions/occupylondon.html
+++ b/actions/occupylondon.html
@@ -124,7 +124,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
 
         <div class="main-title">Occupy London Tech Team</div>
         <div class="body-text">The tech team was a working group of engineers and techies which supported the main movement with on-the-ground tech support, digital security, online infrastructure, electricity, internet access and sometimes to stretch the legs and get a break from the computer a bit of police counter-surveillance and psyops. We were one of the first working groups up and running. "I left, I left, I had a good job and I left, I left because I thought it was right, left, right, left."</div>
-        <image class="project-header-image" src="../assets/images/occupy_6.jpg">
+        <img loading="lazy" class="project-header-image" src="../assets/images/occupy_6.jpg">
       </div>
 
 
@@ -181,7 +181,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div id="footer">
 
       <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <image src="../assets/icons/mail.svg" class="footer-icon"/>
+        <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon"/>
       </a>
     </div>
 
