--- a/art/writing.html
+++ b/art/writing.html
@@ -121,7 +121,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
                 <div class="main-title">Writings</div>
                 <div class="body-text">
                   <pre>A collection of my writings</div>
-                <image class="project-header-image" src="../assets/images/20140726_175001.jpg">
+                <img loading="lazy" class="project-header-image" src="../assets/images/20140726_175001.jpg">
               </div>
 
               <div id="project-details">
@@ -629,7 +629,7 @@ But to bring everyone with us, we need to construct additional pylons.
             <!-- FOOTER -->
             <div id="footer">
               <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-                <image src="../assets/icons/mail.svg" class="footer-icon"/>
+                <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon"/>
               </a>
             </div>
   </div>
