--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="./service/business_development.html">> Business Development</a>
     </div>
   </div>
-  <!-- Use any element to open/show the overlay navigation menu -->
-  <span onclick="openNav()">open</span>
+
   <!-- The overlay -->
   <div id="myNav" class="overlay">
     <!-- Button to close the overlay navigation -->
@@ -192,8 +191,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../service/business_development.html">> Business Development</a>
     </div>
   </div>
-  <!-- Use any element to open/show the overlay navigation menu -->
-  <span onclick="openNav()">open</span>
+
   <!-- MAIN PAGE CONTENT -->
   <div id="main-content">
     <!-- PORTFOLIO HEADER -->
@@ -209,7 +207,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         </div>
         <a class="button" id="my-work-link">
           <span class="button-text">Check out my projects</span>
-          <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+          <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
         </a>
       </div>
     </div>
@@ -230,9 +228,9 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             <div class="subheader-text project-title">#Animachine</div>
             <div class="body-text project-card-text">Participative Digital Fabrication for Endangered Species Conservation.</div>
           </div>
-          <a class="button" href="./project-pages/project-animachine.html">
+          <a class="button" href="./projects/animachine.html">
             <span class="button-text">Read More</span>
-            <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
         <div class="project-card">
@@ -240,9 +238,9 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
           <div class="subheader-text project-title">Electronic Medical Records</div>
           <div class="body-text project-card-text">Solar-Powered HF Radio-Synchronised Electronic Medical Records and Communication Network Deployed in 'extremely remote' Health Clinics and Hospitals around Lake Tanganyika. <n /div>
           </div>
-          <a class="button" href="./project-pages/project-ltfhc.html">
+          <a class="button" href="./projects/ltfhc.html">
             <span class="button-text">Read More</span>
-            <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
         <div class="project-card">
@@ -251,9 +249,9 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             <div class="subheader-text project-title">Sukey</div>
             <div class="body-text project-card-text">Keeping protesters mobile and informed during protests. Languages: php, html, js, css.</div>
           </div>
-          <a class="button" href="./project-pages/project-sukey.html">
+          <a class="button" href="./projects/sukey.html">
             <span class="button-text">Read More</span>
-            <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
         <div class="project-card">
@@ -264,7 +262,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
           </div>
           <a class="button" href="./actions/ecovillage.html">
             <span class="button-text">Read More</span>
-            <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
         <div class="project-card">
@@ -273,9 +271,9 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             <div class="subheader-text project-title">Writings</div>
             <div class="body-text project-card-text">My mind to your mind, my thoughts to your thoughts. Heart through mind.</div>
           </div>
-          <a class="button" href="./project-pages/project-writings.html">
+          <a class="button" href="./art/writing.html">
             <span class="button-text">Read More</span>
-            <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
         <div class="project-card">
@@ -284,9 +282,9 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             <div class="subheader-text project-title">Readings</div>
             <div class="body-text project-card-text">The thoughts of others, encoded in words, are shared here</div>
           </div>
-          <a class="button" href="./project-pages/project-readings.html">
+          <a class="button" href="./art/booklist.html">
             <span class="button-text">Read More</span>
-            <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
         <div class="project-card">
@@ -297,7 +295,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
           </div>
           <a class="button" href="./project-pages/project-occupylondon.html">
             <span class="button-text">Read More</span>
-            <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
         <div class="project-card">
@@ -308,7 +306,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
           </div>
           <a class="button" href="./project-pages/project-cryptoparty.html">
             <span class="button-text">Read More</span>
-            <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
         <div class="project-card">
@@ -319,7 +317,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
           </div>
           <a class="button" href="./project-pages/project-ucloccupation.html">
             <span class="button-text">Read More</span>
-            <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
         <div class="project-card">
@@ -330,7 +328,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
           </div>
           <a class="button" href="./project-pages/project-buildingbanter.html">
             <span class="button-text">Read More</span>
-            <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
         <div class="project-card">
@@ -341,7 +339,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
           </div>
           <a class="button" href="./project-pages/project-classic4.html">
             <span class="button-text">Read More</span>
-            <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
         <div class="project-card">
@@ -352,7 +350,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
           </div>
           <a class="button" href="./project-pages/project-nanode.html">
             <span class="button-text">Read More</span>
-            <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
           </a>
         </div>
       </div>
@@ -360,7 +358,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <!-- FOOTER -->
     <div id="footer">
       <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <image src="./assets/icons/mail.svg" class="footer-icon" />
+        <img loading="lazy" src="./assets/icons/mail.svg" class="footer-icon" />
       </a>
     </div>
   </body>
