--- a/projects/classic4.html
+++ b/projects/classic4.html
@@ -122,7 +122,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
 
       <div class="main-title">Classic 4</div>
       <div class="body-text">Electro Accupuncture / TENS Device. Classic 4 @ Harmony Medical. Languages: c, cpp, asm, python. As a Firmware Engineer and lead on the Classic 4 Electro Acupuncture/TENS treatment device project, my main focus was software development of the device firmware. I enhanced UI/UX, expanded its treatment modes, and improved user control via keypad. My contributions included bug fixes, adding features, removing unnessary code and in some cases extensive refactoring all within the software development processes outlined in "IEC 62304 – medical device software – software life cycle processes" and of a sufficient quality to pass a rigourous audit. The development involved embedded software programming in CPP, C, and PIC assembly.</div>
-      <image class="project-header-image" src="../assets/images/classic4.jpg">
+      <img loading="lazy" class="project-header-image" src="../assets/images/classic4.jpg">
       </div>
 
 
@@ -217,7 +217,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div id="footer">
 
       <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <image src="../assets/icons/mail.svg" class="footer-icon"/>
+        <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon"/>
       </a>
     </div>
 
