--- a/projects/ltfhc.html
+++ b/projects/ltfhc.html
@@ -124,7 +124,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div id="project-header">
       <div class="main-title">LTFHC Radio Communications Project</div>
       <div class="body-text">Solar Powered HF Radio Synchronised Electronic Medical Records System built in Berlin and deployed in extremely remote locations around Lake Tanganyika.</div>
-      <image class="project-header-image" src="../assets/images/20140724_153555.jpg">
+      <img loading="lazy" class="project-header-image" src="../assets/images/20140724_153555.jpg">
       </div>
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
@@ -383,7 +383,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         <div id="footer">
 
           <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-            <image src="../assets/icons/mail.svg" class="footer-icon"/>
+            <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon"/>
           </a>
         </div>
 
