--- a/projects/ose.html
+++ b/projects/ose.html
@@ -122,7 +122,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         The common thread is distributing raw productive power towards personal autonomy, and increased connection between people - in a more meaningful world... More info: <a href="https://wiki.opensourceecology.org/wiki/Dedicated_Project_Visits">OSE Wiki: DPV</a>.</div>
         <div class="body-text">
         I was able to participate at the Open Source Ecology Project remotely online via the wiki prior to my visit and also for one month onsite at the Factor E Farm (Maysville, USA) by doing a Dedicated Project Visit in November 2013.</div>
-        <image class="project-header-image" src="../assets/images/CNCTorchTableDevelopmentTimeline.png">
+        <img loading="lazy" class="project-header-image" src="../assets/images/CNCTorchTableDevelopmentTimeline.png">
         </div>
         <div id="project-details">
           <div class="subheader-text">Open Source Ecology (OSE) project.</div>
@@ -190,7 +190,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         <!-- FOOTER -->
         <div id="footer">
           <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-            <image src="../assets/icons/mail.svg" class="footer-icon" />
+            <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
           </a>
         </div>
       </body>
