--- a/service/engineering.html
+++ b/service/engineering.html
@@ -125,7 +125,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         <br> Using technical skills for social movements has allowed me not only to support important causes but also demonstrate how technological know-how can be harnessed effectively towards making a difference in society. <br>
         <br> By offering these services as a freelance consultant—with equal emphasis on both IT consultancy and engineering aspects—I maintain flexibility over workload management while delivering high-quality results tailored specifically to each client's unique requirements!
       </div>
-      <image class="project-header-image" src="../assets/images/XBee-2-mW.jpg">
+      <img loading="lazy" class="project-header-image" src="../assets/images/XBee-2-mW.jpg">
       </div>
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
@@ -148,7 +148,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <!-- FOOTER -->
     <div id="footer">
       <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <image src="../assets/icons/mail.svg" class="footer-icon" />
+        <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
       </a>
     </div>
   </body>
