--- a/service/security.html
+++ b/service/security.html
@@ -135,7 +135,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         <div class="project-details-content">
           <div class="body-text">With a strong background in technology and engineering and over 13 years of experience actively participating in the hacker scene, from grassroots and the underground to industry including involvement with groundbreaking movements such as the Cryptoparty Movement and the Chaos Computer Club (CCC), I am well-equipped to offer my expertise as a Cybersecurity Expert/Consultant. My primary goal is to utilize my extensive knowledge of security to help orginisations engaged in social change and ethical businesses to protect their digital assets from cyber threats effectively. <br>
             <br>
-            <image src="../assets/images/cryptopartylondon.jpg" style="float: right; height: 300px; width: 400px; margin-left: 20px;"> 
+            <img loading="lazy" src="../assets/images/cryptopartylondon.jpg" style="float: right; height: 300px; width: 400px; margin-left: 20px;"> 
               The Cryptoparty Movement has been empowering individuals around the world by teaching them how to use encryption tools and techniques that enhance privacy protection. As an active participant in this movement, I have witnessed firsthand its tremendous impact on raising awareness about data privacy and fostering a culture where people prioritize their online safety. <br>
               
               <br>           
@@ -143,7 +143,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             </div> 
             <div class="subheader-text">Services Offered as a Cybersecurity Expert/Consultant</div>
             <div class="body-text">
-             <image src="../assets/images/keep_calm_hack_on.jpg" style="float: right; height: 500px; width: 286px; margin-left: 20px;">
+             <img loading="lazy" src="../assets/images/keep_calm_hack_on.jpg" style="float: right; height: 500px; width: 286px; margin-left: 20px;">
               Security Risk Assessment: conduct comprehensive assessments on your company's digital infrastructure using advanced threat modeling methodologies; identifying vulnerabilities or weaknesses susceptible to potential cyber attacks. <br>
               <br> Secure Network Design: robust network architecture tailored specifically for your business needs; utilizing best practices such as DMZs, VPNs, firewalls configuration optimization while adhering to industry standards ensuring maximum protection against cyber threats. <br>
               <br> Penetration Testing Perform rigorous penetration testing simulating real-world hacking scenarios uncovering potential attack vectors before malicious actors exploit them effectively safeguarding your organization from costly data breaches or downtime incidents. <br>
@@ -200,7 +200,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
           <!-- FOOTER -->
           <div id="footer">
             <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-              <image src="../assets/icons/mail.svg" class="footer-icon" />
+              <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
             </a>
           </div>
         </body>
