--- a/actions/ucloccupation.html
+++ b/actions/ucloccupation.html
@@ -116,7 +116,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div id="project-header">
       <div class="main-title">UCLOccupation</div>
       <div class="body-text">Bootstrapped the tech team at a student occupation (which became a hub of a national movement) together with other fellow nerds, students and volunteers.</div>
-      <image class="project-header-image" src="../assets/images/ucloccupation_com.png">
+      <img loading="lazy" class="project-header-image" src="../assets/images/ucloccupation_com.png">
       </div>
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
@@ -164,7 +164,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <!-- FOOTER -->
       <div id="footer">
         <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-          <image src="../assets/icons/mail.svg" class="footer-icon" />
+          <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
         </a>
       </div>
     </body>
