--- a/art/booklist.html
+++ b/art/booklist.html
@@ -120,7 +120,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div id="project-header">
       <div class="main-title">Readings</div>
       <div class="body-text">A collection of things that others have written</div>
-      <image class="project-header-image" src="../assets/images/20140726_175001.jpg">
+      <img loading="lazy" class="project-header-image" src="../assets/images/20140726_175001.jpg">
       </div>
 
       <div id="project-details">
@@ -331,7 +331,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         <!-- FOOTER -->
         <div id="footer">
           <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-            <image src="../assets/icons/mail.svg" class="footer-icon"/>
+            <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon"/>
           </a>
         </div>
       </div>
