--- a/projects/animachine.html
+++ b/projects/animachine.html
@@ -122,7 +122,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div id="project-header">
       <div class="main-title">Animachine</div>
       <div class="body-text">Simply by tweeting #animachine, supporters triggered successive layers to be printed on a 3D printer that recreated a model of the endangered animal. I was the lead engineer working with a fantastic team of hackers and nerds at Youin3D in Berlin to design, test and build the system and the code to realise this project. We started with a digital rendering of what the final project should look like. After a short creative briefing about what it should do, given to us by our project partners, we rolled up our sleeves and did the detailed design i.e. the 'how' part. It was then installed as an interactive display in the Alexa Shopping Centre in central Berlin. Our project partners were McCann Worldgroup Deutschland, Stiftung Artenschutz and their respective collaborators.</div>
-      <image class="project-header-image" src="../assets/images/animachine.png">
+      <img loading="lazy" class="project-header-image" src="../assets/images/animachine.png">
       </div>
 
       <!-- PROJECT DETAILS -->
@@ -193,7 +193,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <!-- FOOTER -->
     <div id="footer">
       <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <image src="../assets/icons/mail.svg" class="footer-icon"/>
+        <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon"/>
       </a>
     </div>
 
