--- a/projects/buildingbanter.html
+++ b/projects/buildingbanter.html
@@ -123,7 +123,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
 
       <div class="main-title">Building Banter</div>
       <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
-      <image class="project-header-image" src="../assets/images/XBee-2-mW.jpg">
+      <img loading="lazy" class="project-header-image" src="../assets/images/XBee-2-mW.jpg">
       </div>
 
 
@@ -153,7 +153,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div id="footer">
 
       <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <image src="../assets/icons/mail.svg" class="footer-icon"/>
+        <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon"/>
       </a>
     </div>
 
