--- a/projects/sukey.html
+++ b/projects/sukey.html
@@ -116,7 +116,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div id="project-header">
       <div class="main-title">Sukey</div>
       <div class="body-text">Keeping protesters mobile and informed during protests. Languages: php, html, js, css.</div>
-      <image class="project-header-image" src="../assets/images/sukey_suit.jpg">
+      <img loading="lazy" class="project-header-image" src="../assets/images/sukey_suit.jpg">
       </div>
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
@@ -228,7 +228,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <!-- FOOTER -->
     <div id="footer">
       <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <image src="../assets/icons/mail.svg" class="footer-icon" />
+        <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
       </a>
     </div>
   </body>
