--- a/service/repair_feedback.html
+++ b/service/repair_feedback.html
@@ -42,7 +42,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
   <title>Samuel Carlisle BEng (hons) Dunelm MIET</title>
   <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  1311
+ 
   <link rel="stylesheet" href="../css/layout.css">
   <link rel="stylesheet" href="../css/typography.css">
   <link rel="stylesheet" href="../css/utilities.css">
@@ -148,7 +148,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
 
       <div class="main-title">Nanode</div>
       <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It is a low cost platform for creative development of web connected ideas. Languages: C</div>
-      <image class="project-header-image" src="../assets/images/nanode.png">
+      <img loading="lazy" class="project-header-image" src="../assets/images/nanode.png">
       </div>
 
 
@@ -185,7 +185,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div id="footer">
 
       <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <image src="../assets/icons/mail.svg" class="footer-icon"/>
+        <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon"/>
       </a>
     </div>
 
